tests/snapshots/parse__proc_macro_casing.snap
---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "foo",
            edition: None,
            version: Some(
                Local(
                    "1",
                ),
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autobins: true,
            autoexamples: true,
            autotests: true,
            autobenches: true,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: [],
    bench: [],
    test: [],
    example: [],
    patch: None,
    lib: Some(
        Product {
            path: None,
            name: None,
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: true,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: None,
        },
    ),
    profile: None,
    badges: None,
}
