tests/snapshots/parse__workspace_dependency-2.snap
---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "core",
            edition: None,
            version: Local(
                "0.1.0",
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autobins: true,
            autoexamples: true,
            autotests: true,
            autobenches: true,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: Some(
        {
            "chrono": Inherited(
                InheritedDependencyDetail {
                    workspace: True,
                    features: None,
                    optional: None,
                },
            ),
            "config": Simple(
                "0.13",
            ),
            "tokio": Inherited(
                InheritedDependencyDetail {
                    workspace: True,
                    features: Some(
                        [
                            "rt-multi-thread",
                        ],
                    ),
                    optional: None,
                },
            ),
        },
    ),
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: None,
    bench: None,
    test: None,
    example: None,
    patch: None,
    lib: None,
    profile: None,
    badges: None,
}
