tests/snapshots/parse__workspace_lints_override_inherited-2.snap
---
source: tests/parse.rs
assertion_line: 250
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "bar",
            edition: None,
            version: Some(
                Inherited {
                    workspace: True,
                },
            ),
            build: None,
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autolib: None,
            autobins: None,
            autoexamples: None,
            autotests: None,
            autobenches: None,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: [],
    bench: [],
    test: [],
    example: [],
    patch: None,
    lib: None,
    profile: None,
    badges: None,
    lints: Some(
        MaybeInheritedLintsSet {
            workspace: Some(
                True,
            ),
            lints: {
                "clippy": {
                    "complexity": Config(
                        LintConfig {
                            level: Deny,
                            priority: 0,
                        },
                    ),
                },
                "rust": {
                    "unused": Level(
                        Forbid,
                    ),
                },
            },
        },
    ),
}
